--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
 	"require": {
 		"recognize/extra-bundle": "dev-symfony3.0",
-		"sensio/framework-extra-bundle": "^3.0"
+		"sensio/framework-extra-bundle": ">=3.0"
 	},
 	"target-dir": "Recognize/MailplusBundle",
 	"autoload": {
